--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,31 @@
 ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
   list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 25%;
-  background-color: #f1f1f1;
-  height: 100%;
-  /* Full height */
-  position: fixed;
-  /* Make it stick, even on scroll */
-  overflow: auto;
-  /* Enable scrolling if the sidenav has too much content */
+  margin: 0 auto;
+  padding: 10px;
+  width: 100%;
+  background-color: darkgreen;
+  opacity: 0.7;
+  font-family: 'Courier New', Courier, monospace;
+  box-shadow: 2px -3px 22px 1px black;
+  text-decoration: none;
+}
+ul .logo-img {
+  display: flex;
+  align-items: center;
+}
+ul a {
+  color: black;
+  opacity: none;
+  text-decoration: bold;
+}
+ul a:hover {
+  color: lightgreen;
+}
+@media screen (max-width: 500px) {
+  ul {
+    width: 100%;
+  }
 }
