--- a/less/index.less
+++ b/less/index.less
@@ -1,16 +1,17 @@
+// mobile styling
 ul {
     display: flex;
     flex-direction: row;
-    align-content: left;
+    align-content: center;
     justify-content: space-around;
     list-style-type: none;
     margin: 0 auto;
     padding: 10px;
+    
     width: 98%;
     height:100%;
     background-color: darkgreen;
     opacity: 0.7;
-    // position: fixed; /* Make it stick, even on scroll */
     text-decoration: none;
     font-family: 'Courier New', Courier, monospace;
     box-shadow: 2px -3px 22px 1px black;
@@ -35,8 +36,44 @@ ul {
 
     }
     
-    @media screen(max-width:500px) {
-        width:100%
+    // @media screen (max-width:500px) {
+    //     width: 98%;
+    // }
+}
+
+
+.luncher-header{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    margin:0 auto;
+    width:98%;
+    background-image: url(/images/back-to-school.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    
+
+    .slogan{
+        flex-direction: column;
+    }
+
+}
+.main-body{
+    display:flex;
+    flex-direction: column;
+
+    .test{
+        flex-direction: row;
+    }
+
+    .donation{
+        margin:0 auto;
+
+        
     }
 }
 
+footer{
+    display:flex;
+    justify-content: center;
+}
