--- a/less/index.less
+++ b/less/index.less
@@ -62,6 +62,34 @@ ul {
     display:flex;
     flex-direction: column;
 
+    .form-box{
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .donation-form{
+        display:flex;
+        flex-direction: column;
+        // justify-content: center;
+        
+        button{
+            width:50%;
+            margin:0 auto;
+            height: 50px;
+            border-radius: 10px;
+            background-color:lightgreen;
+            color:white 
+        
+        }
+            button:hover{
+                background-color:lightgoldenrodyellow;
+                color:black;
+                cursor: pointer;
+            }
+        
+    }
+
     .test{
         flex-direction: row;
     }
