--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,9 @@
+* {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 ul {
   display: flex;
   flex-direction: row;
-  align-content: center;
   justify-content: space-around;
   list-style-type: none;
   margin: 0 auto;
@@ -9,11 +11,8 @@ ul {
   width: 98%;
   height: 100%;
   background-color: darkgreen;
-  opacity: 0.7;
   font-family: 'Courier New', Courier, monospace;
-  box-shadow: 2px -3px 22px 1px black;
   text-decoration: none;
-  border-radius: 10px;
 }
 ul .logo-img {
   display: flex;
@@ -27,18 +26,42 @@ ul a {
 ul a:hover {
   color: lightgreen;
 }
+@media (max-width: 500px) {
+  ul {
+    width: 98%;
+  }
+}
 .luncher-header {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin: 0 auto;
   width: 98%;
+  height: 100%;
   background-image: url(/images/back-to-school.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 .luncher-header .slogan {
-  flex-direction: column;
+  margin-bottom: 20px;
+  font-size: 50px;
+  font-weight: 200;
+  line-height: 30px;
+  color: white;
+}
+.luncher-header p {
+  margin: 0 0 10px;
+  font-size: 21px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+@media (max-width: 500px) {
+  .luncher-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 30px;
+    width: 89%;
+  }
 }
 .main-body {
   display: flex;
@@ -75,4 +98,8 @@ ul a:hover {
 footer {
   display: flex;
   justify-content: center;
+}
+footer .nav-footer {
+  display: flex;
+  justify-content: space-around;
 }
