--- a/less/index.less
+++ b/less/index.less
@@ -1,22 +1,23 @@
 // mobile styling
+*{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 ul {
     display: flex;
     flex-direction: row;
-    align-content: center;
     justify-content: space-around;
     list-style-type: none;
     margin: 0 auto;
     padding: 10px;
-    
     width: 98%;
     height:100%;
     background-color: darkgreen;
-    opacity: 0.7;
+    // opacity: 0.7;
     text-decoration: none;
     font-family: 'Courier New', Courier, monospace;
-    box-shadow: 2px -3px 22px 1px black;
+    // box-shadow: 2px -3px 22px 1px black;
     text-decoration: none;
-    border-radius: 10px;
+    // border-radius: 10px;
 
   
     .logo-img{
@@ -35,10 +36,12 @@ ul {
         color:lightgreen;
 
     }
+
+    @media(max-width:500px){
+        width: 98%;
+    }
     
-    // @media screen (max-width:500px) {
-    //     width: 98%;
-    // }
+   
 }
 
 
@@ -48,15 +51,33 @@ ul {
     justify-content: center;
     margin:0 auto;
     width:98%;
+    height:100%;
     background-image: url(/images/back-to-school.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     
 
     .slogan{
-        flex-direction: column;
+        margin-bottom: 20px;
+        font-size: 50px;
+        font-weight: 200;
+        line-height: 30px;
+        color: white;
+
+    }
+    p{
+        margin: 0 0 10px;
+        font-size: 21px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
 
+    @media(max-width: 500px){
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        padding:30px;
+        width:89%;
+    }
 }
 .main-body{
     display:flex;
@@ -104,4 +125,9 @@ ul {
 footer{
     display:flex;
     justify-content: center;
+
+    .nav-footer{
+        display:flex;
+        justify-content: space-around;
+    }
 }
