--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,9 @@
 * {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+body {
+  background-color: beige;
+}
 ul {
   display: flex;
   flex-direction: row;
@@ -38,9 +41,7 @@ ul a:hover {
   margin: 0 auto;
   width: 98%;
   height: 100%;
-  background-image: url(/images/back-to-school.jpg);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-color: #dae52d;
 }
 .luncher-header .slogan {
   margin-bottom: 20px;
@@ -66,34 +67,67 @@ ul a:hover {
 .main-body {
   display: flex;
   flex-direction: column;
+  align-content: center;
+  margin-bottom: 20px;
+  font-size: 15px;
+  font-weight: 200;
+  line-height: 30px;
 }
 .main-body .form-box {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 20px;
+  margin: 0 auto;
 }
-.main-body .donation-form {
+.main-body .form-box h2 {
+  display: flex;
+  justify-content: center;
+}
+.form1 {
+  display: flex;
+  justify-content: center;
+}
+.form1 .donation-form {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  background-color: lightgrey;
+  border-radius: 20px;
+  padding: 10px;
+  width: 75%;
+  height: 375px;
 }
-.main-body .donation-form button {
-  width: 50%;
+.form1 button {
+  width: 300px;
   margin: 0 auto;
   height: 50px;
   border-radius: 10px;
   background-color: lightgreen;
   color: white;
 }
-.main-body .donation-form button:hover {
+.form1 button:hover {
   background-color: lightgoldenrodyellow;
   color: black;
   cursor: pointer;
 }
-.main-body .test {
-  flex-direction: row;
-}
-.main-body .donation {
+.test {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px;
   margin: 0 auto;
+}
+.donation {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px;
+  margin: 0 auto;
+}
+.donation h2 {
+  display: flex;
+  justify-content: center;
 }
 footer {
   display: flex;
