--- a/less/index.less
+++ b/less/index.less
@@ -14,8 +14,7 @@ ul {
     margin: 0 auto;
     padding: 10px;
     width: 98%;
-    height:100%;
-    background-color: darkgreen;
+    background-color: black;
     // opacity: 0.7;
     text-decoration: none;
     font-family: 'Courier New', Courier, monospace;
@@ -32,7 +31,7 @@ ul {
     
   
     a{
-        color:black;
+        color:white;
         opacity: none;
         text-decoration: bold;
     }
@@ -54,13 +53,11 @@ ul {
     justify-content: center;
     margin:0 auto;
     width:98%;
-    height:100%;
-    // background-image: url(/images/back-to-school.jpg);
-    // background-repeat: no-repeat;
-    // background-attachment: fixed;
-    // was just trying out fixed backgrounds
-    background-color: #dae52d;
-    
+    background-color:rgb(255, 222, 89);
+  
+    .luncher{
+        width:100%;
+    }
 
     .slogan{
         margin-bottom: 20px;
@@ -177,6 +174,7 @@ ul {
 footer{
     display:flex;
     justify-content: center;
+    color: white;
 
     .nav-footer{
         display:flex;
