--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,9 @@
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 body {
+  box-sizing: border-box;
   background-color: beige;
+  margin: 0 auto;
 }
 ul {
   display: flex;
@@ -15,12 +17,14 @@ ul {
   background-color: black;
   font-family: 'Courier New', Courier, monospace;
   text-decoration: none;
+  position: fixed;
 }
 ul .logo-img {
   display: flex;
   align-items: center;
 }
 ul a {
+  margin: 0px;
   color: white;
   opacity: none;
   text-decoration: bold;
@@ -138,4 +142,5 @@ footer {
 footer .nav-footer {
   display: flex;
   justify-content: space-around;
+  position: relative;
 }
