--- a/less/index.less
+++ b/less/index.less
@@ -15,7 +15,7 @@ ul {
     list-style-type: none;
     margin: 0 auto;
     padding: 10px;
-    width: 98%;
+    width: 100%;
     background-color: black;
     // opacity: 0.7;
     text-decoration: none;
@@ -54,7 +54,7 @@ ul {
     flex-direction: row;
     justify-content: center;
     margin:0 auto;
-    width:98%;
+    width:100%;
     background-color:rgb(255, 222, 89);
   
     .luncher{
@@ -150,7 +150,7 @@ ul {
         }
 
  .test{
-    //    add mixins here
+    //  mixin
         display:flex;
         flex-direction: column;
         justify-content: center;
@@ -160,11 +160,12 @@ ul {
 
 .donation{
         // add mixins here 
-        display:flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 20px;
-        margin:0 auto;
+        // display:flex;
+        // flex-direction: column;
+        // justify-content: center;
+        // padding: 20px;
+        // margin:0 auto;
+        .test();
 
         h2{
             display: flex;
