--- a/less/index.less
+++ b/less/index.less
@@ -153,26 +153,27 @@ ul {
         // justify-content: center;
         // padding: 20px;
         // margin:0 auto;
-        .form-box();
-         
-  
+        // .form-box();
+        .donation();
+
+        
             @media(max-width:500px){
                 display:flex;
                 flex-direction: column;
             }
+      
         }
-
  
        
 
 .donation{
         // add mixins here 
-        // display:flex;
-        // flex-direction: column;
-        // justify-content: center;
-        // padding: 20px;
-        // margin:0 auto;
-        .main-body();
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 20px;
+        margin:0 auto;
+        // .main-body();
 
         h2{
             display: flex;
