--- a/css/index.css
+++ b/css/index.css
@@ -98,8 +98,13 @@ ul a:hover {
   background-color: lightgrey;
   border-radius: 20px;
   padding: 10px;
-  width: 75%;
+  width: 450px;
   height: 375px;
+}
+@media (max-width: 500px) {
+  .form1 .donation-form {
+    width: 55%;
+  }
 }
 .form1 button {
   width: 300px;
@@ -108,6 +113,13 @@ ul a:hover {
   border-radius: 10px;
   background-color: lightgreen;
   color: white;
+  font-size: 15px;
+  font-weight: bold;
+}
+@media (max-width: 500px) {
+  .form1 button {
+    width: 55%;
+  }
 }
 .form1 button:hover {
   background-color: lightgoldenrodyellow;
