--- a/less/index.less
+++ b/less/index.less
@@ -119,13 +119,14 @@ ul {
         flex-direction: column;
         align-items: center;
         background-color:lightgrey;
-        // justify-content: center;
-        // align-content: center;
         border-radius:20px;
         padding:10px;
-        width: 75%;
+        width: 450px;
         height: 375px;
         
+        @media(max-width:500px){
+            width: 55%;
+        }
 
     }
         
@@ -135,7 +136,13 @@ ul {
             height: 50px;
             border-radius: 10px;
             background-color:lightgreen;
-            color:white 
+            color:white; 
+            font-size: 15px;
+            font-weight:bold;
+
+            @media(max-width:500px){
+                width: 55%;
+            }
         
         }
             button:hover{
