--- a/less/index.less
+++ b/less/index.less
@@ -1,12 +1,22 @@
 // 
 *{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-   
+    
 }
 body{
     box-sizing: border-box;
     background-color:beige;
     margin:0 auto;
+
+    @media(max-width:800px){
+        width:100%;
+        margin:0 auto;
+    }
+
+    @media(max-width:500px){
+        width: 100%;
+        margin:0 auto;
+    }
 }
 ul {
     display: flex;
@@ -18,18 +28,9 @@ ul {
     width: 100%;
     background-color: black;
     // opacity: 0.7;
-    
     font-family: 'Courier New', Courier, monospace;
     position: fixed;
 
-  
-    .logo-img{
-        display:flex;
-        align-items: center;
-    }
-    
-    
-  
     a{
         margin:0px;
         color:white;
@@ -41,7 +42,7 @@ ul {
     }
 
     @media(max-width:500px){
-        width: 98%;
+        width: 100%;
     }
     
    
@@ -125,7 +126,8 @@ ul {
         height: 375px;
         
         @media(max-width:500px){
-            width: 55%;
+            width: 50%;
+
         }
 
     }
@@ -141,9 +143,8 @@ ul {
             font-weight:bold;
 
             @media(max-width:500px){
-                width: 55%;
+                width:100%;
             }
-        
         }
             button:hover{
                 background-color:lightgoldenrodyellow;
@@ -151,7 +152,8 @@ ul {
                 cursor: pointer;
             }
         
-        }
+        
+    }
 
 .test{
     //  mixin
@@ -186,20 +188,27 @@ ul {
             display: flex;
             justify-content: center;
         }
-    }
- 
+}
+
 
 footer{
     display:flex;
     justify-content: center;
     color: white;
-
-    
+    width:100%;
+   
+     @media(max-width:500px){
+            width: 100%;
+            p{
+                font-size:0.5em;
+            }
+        }
 
     .nav-footer{
         display:flex;
         justify-content: space-around;
+        padding:10px;
         position: relative;
-        
-    }
+        margin:0 auto;
+    }  
 }
