--- a/css/index.css
+++ b/css/index.css
@@ -27,6 +27,7 @@ ul {
   padding: 10px;
   width: 100%;
   background-color: black;
+  opacity: 0.7;
   font-family: 'Courier New', Courier, monospace;
   position: fixed;
 }
@@ -34,13 +35,19 @@ ul a {
   margin: 0px;
   color: white;
   text-decoration: none;
+  width: 100%;
 }
 ul a:hover {
   color: lightgreen;
 }
 @media (max-width: 500px) {
   ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1em;
     width: 100%;
+    padding: 10px;
   }
 }
 .luncher-header {
@@ -161,6 +168,13 @@ ul a:hover {
 .donation h2 {
   display: flex;
   justify-content: center;
+}
+#donations {
+  width: 100%;
+  height: 2em;
+  background-color: lightgreen;
+  text-align: center;
+  color: black;
 }
 footer {
   display: flex;
