--- a/less/index.less
+++ b/less/index.less
@@ -27,7 +27,7 @@ ul {
     padding: 10px;
     width: 100%;
     background-color: black;
-    // opacity: 0.7;
+    opacity: 0.7;
     font-family: 'Courier New', Courier, monospace;
     position: fixed;
 
@@ -35,6 +35,8 @@ ul {
         margin:0px;
         color:white;
         text-decoration: none;
+        width:100%;
+       
     }
     a:hover{
         color:lightgreen;
@@ -42,7 +44,12 @@ ul {
     }
 
     @media(max-width:500px){
+        display:flex;
+        flex-direction: column;
+        align-items:center;
+        font-size: 1em;
         width: 100%;
+        padding:10px;
     }
     
    
@@ -189,7 +196,14 @@ ul {
             justify-content: center;
         }
 }
-
+// got this idea from W3schools
+#donations{
+    width: 100%;
+    height: 2em;
+    background-color:lightgreen;
+    text-align: center; 
+    color: black; 
+  }
 
 footer{
     display:flex;
