styled donation bar

--- a/css/index.css
+++ b/css/index.css
@@ -175,6 +175,7 @@ ul a:hover {
   background-color: lightgreen;
   text-align: center;
   color: black;
+  border-radius: 10px;
 }
 footer {
   display: flex;
