--- a/less/index.less
+++ b/less/index.less
@@ -7,10 +7,12 @@ body{
     box-sizing: border-box;
     background-color:beige;
     margin:0 auto;
+    font-size:1em;
 
     @media(max-width:800px){
         width:100%;
         margin:0 auto;
+        font-size:0.8em
     }
 
     @media(max-width:500px){
@@ -195,16 +197,49 @@ ul {
             display: flex;
             justify-content: center;
         }
-}
+       
+        button{
+            width:300px;
+            margin:0 auto;
+            margin-top:10px;
+            height: 50px;
+            border-radius: 10px;
+            background-color: royalblue;
+            color:ghostwhite; 
+            font-size: 15px;
+            font-weight:bold;
+            
+
+            @media(max-width:500px){
+                width:100%;
+            }
+        }
+            button:hover{
+                background-color:ghostwhite;
+                color:royalblue;
+                cursor: pointer;
+            }
+    }
+
+
 // got this idea from W3schools
 #donations{
     width: 100%;
     height: 2em;
-    background-color:lightgreen;
+    background-color:lightgrey;
     text-align: center; 
     color: black; 
     border-radius: 10px;
+}
+
+  #bar {
+    width: 75%;
+    height: 30px;
+    background-color: lightgreen;
+    border-radius: 10px;
   }
+
+ 
 
 footer{
     display:flex;
