--- a/less/index.less
+++ b/less/index.less
@@ -212,3 +212,30 @@ footer{
         margin:0 auto;
     }  
 }
+
+
+//About Us
+
+h2 {
+    display: flex;
+    justify-content: center;
+}
+
+//mixin
+.image-pics {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.first-two {
+    .image-pics();
+}
+
+.second-two {
+    .image-pics();
+}
+
+.about-pic {
+    padding: 5%;
+}
