--- a/css/index.css
+++ b/css/index.css
@@ -232,6 +232,7 @@ footer {
   justify-content: center;
   color: white;
   width: 100%;
+  margin: 0 auto;
 }
 @media (max-width: 500px) {
   footer {
@@ -246,5 +247,5 @@ footer .nav-footer {
   justify-content: space-around;
   padding: 10px;
   position: relative;
-  margin: 0 auto;
+  width: 100%;
 }
