--- a/less/index.less
+++ b/less/index.less
@@ -246,6 +246,8 @@ footer{
     justify-content: center;
     color: white;
     width:100%;
+    margin:0 auto;
+    
    
      @media(max-width:500px){
             width: 100%;
@@ -259,6 +261,7 @@ footer{
         justify-content: space-around;
         padding:10px;
         position: relative;
-        margin:0 auto;
+        width:100%;
+       
     }  
 }
