--- a/css/index.css
+++ b/css/index.css
@@ -20,6 +20,9 @@ body {
     margin: 0 auto;
   }
 }
+.nav-bar {
+  position: fixed;
+}
 ul {
   display: flex;
   flex-direction: row;
@@ -31,7 +34,6 @@ ul {
   background-color: black;
   opacity: 0.7;
   font-family: 'Courier New', Courier, monospace;
-  position: fixed;
 }
 ul a {
   margin: 0px;
@@ -80,8 +82,7 @@ ul a:hover {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 30px;
-    width: 89%;
+    width: 100%;
   }
 }
 .main-body {
@@ -181,6 +182,13 @@ ul a:hover {
     flex-direction: column;
   }
 }
+@media (max-width: 500px) {
+  .test .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .donation {
   display: flex;
   flex-direction: column;
@@ -246,6 +254,5 @@ footer .nav-footer {
   display: flex;
   justify-content: space-around;
   padding: 10px;
-  position: relative;
   width: 100%;
 }
