--- a/less/index.less
+++ b/less/index.less
@@ -20,6 +20,9 @@ body{
         margin:0 auto;
     }
 }
+.nav-bar{
+    position: fixed;
+}
 ul {
     display: flex;
     flex-direction: row;
@@ -31,7 +34,7 @@ ul {
     background-color: black;
     opacity: 0.7;
     font-family: 'Courier New', Courier, monospace;
-    position: fixed;
+    
 
     a{
         margin:0px;
@@ -87,8 +90,8 @@ ul {
         display:flex;
         flex-direction: column;
         justify-content: center;
-        padding:30px;
-        width:89%;
+        // padding:30px;
+        width:100%;
     }
 }
 .main-body{
@@ -179,7 +182,13 @@ ul {
                 display:flex;
                 flex-direction: column;
             }
-      
+        .container{
+           @media(max-width:500px){
+            display:flex;
+            flex-direction: column;
+            align-items: center;
+        }
+      }
         }
  
        
@@ -260,8 +269,9 @@ footer{
         display:flex;
         justify-content: space-around;
         padding:10px;
-        position: relative;
+        // position: relative;
         width:100%;
+        
        
     }  
 }
