--- a/css/index.css
+++ b/css/index.css
@@ -73,7 +73,7 @@ ul a:hover {
   color: white;
 }
 .luncher-header p {
-  margin: 0 0 10px;
+  margin: 0 auto;
   font-size: 21px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
