--- a/less/index.less
+++ b/less/index.less
@@ -81,7 +81,8 @@ ul {
 
     }
     p{
-        margin: 0 0 10px;
+        // margin: 0 0 10px;
+        margin:0 auto;
         font-size: 21px;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
